NEWS file for PEL: PHP Exif Library.  A library with support for
reading and writing Exif headers in JPEG and TIFF images using PHP.

Copyright (C) 2004, 2005, 2006, 2007  Martin Geisler.
Licensed under the GNU GPL, see COPYING for details.


PEL Version 0.9.2  (Not yet released)
*************************************

Notes:

Added static method for controlling the quality for encoding JPEG
images.

Changes:

* Added static Pel::setJPEGQuality() and Pel::getJPEGQuality() method
  for setting and getting the quailty used when PelJpeg automatically
  converts an image resource to a JPEG image. Thanks Csaba Gabor for
  asking about this.

* Moved the XP specific tags from the Exif IFD to the IFD0/1 IFD.


PEL Version 0.9.1  December 19th 2006
*************************************

Notes:

Added setExif(), getExif(), and clearExif() methods as a convenient
and recommended way of manipulating the Exif data in a PelJpeg object.
Improved PelEntryTime to deal with timestamps in the full range from
year 0 to year 9999. Removed PelTag::getDescription() because the
descriptions were out of context. A new example demonstrates how to
resize images while keeping the Exif data intact. Added a Japanese and
updated the French and Danish translations.

Changes:

* The constructors of PelJpeg and PelTiff can now take an argument
  which is used for initialization. This can be a filename (equivalent
  to calling loadFromFile()), a PelDataWindow (equivalent to load()).
  The PelJpeg constructor will also accept an image resource.

* Added PelJpeg::setExif(). This method should always be used in
  preference to PelJpeg::insertSection() and PelJpeg::appendSection().
  One should actually not be using appendSection() unless one is very
  sure that the image has not been ended by a EOI marker.

* Added PelJpeg::getExif().  This method is the new preferred way of
  obtaining the PelExif object from a PelJpeg object.  Updated the
  examples and code to make use of it.
